--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 body{
     margin: 0;
     padding: 0;
+    height: 100vh;
 }
 .sidebar{
     width: 20%;
@@ -91,6 +92,23 @@ body{
     align-items: center;
 }
 
+.signout{
+    position: absolute;
+    right: 5%;
+    top: 5%;
+    padding: 10px 20px;
+    border-radius: 60px;
+    border: 0;
+    background: rgba(95, 61, 42, 0.61);
+    color: silver;
+    transition: 0.2s;
+    cursor: pointer;
+    font-weight: bold;
+}
+.signout:hover{
+    background: orangered;
+    color: white;
+}
 .card{
     width: 500px;
     height: 400px;
